# wotreplay-parser

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  wotreplay-parser.xml
data/: Makefile  tanks.xml
data/maps/definitions/: 01_karelia.xml  02_malinovka.xml  03_campania_big.xml  04_himmelsdorf.xml  05_prohorovka.xml  06_ensk.xml  07_lakeville.xml  08_ruinberg.xml  08_ruinberg_se20.xml  101_dday.xml  105_germany_se20.xml  108_normandy_se20.xml  10_hills.xml  112_eiffel_tower_ctf.xml  114_czech.xml  115_sweden.xml  11_murovanka.xml  13_erlenberg.xml  14_siegfried_line.xml  14_siegfried_line_se20.xml  17_munchen.xml  18_cliff.xml  19_monastery.xml  208_bf_epic_normandy.xml  209_wg_epic_suburbia.xml  212_epic_random_valley.xml  217_er_alaska.xml  222_er_clime.xml  23_westfeld.xml  28_desert.xml  29_el_hallouf.xml  31_airfield.xml  33_fjord.xml  34_redshire.xml  35_steppes.xml  36_fishing_bay.xml  37_caucasus.xml  38_mannerheim_line.xml  44_north_america.xml  45_north_america.xml  (+7 more)
ext/cmake_modules/: FindTBB.cmake
ext/wottools/src/: PackedSection.cs  Program.cs  Reader.cs
src/: animation_writer.cpp  animation_writer.h  arena.cpp  arena.h  arena_def.cpp  arena_def.h  cipher_context.cpp  cipher_context.h  class_heatmap_writer.cpp  class_heatmap_writer.h  game.cpp  game.h  heatmap_writer.cpp  heatmap_writer.h  image.cpp  image.h  image_util.cpp  image_util.h  image_writer.cpp  image_writer.h  imageviewer.cpp  imageviewer.h  json_writer.cpp  json_writer.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  packet.cpp  packet.h  packet_reader.h  packet_reader_80.cpp  packet_reader_80.h  parser.cpp  parser.h  regex.h  replay_file.cpp  replay_file.h  (+12 more)
wotreplay-parser.xcodeproj/: project.pbxproj
wotreplay-parser.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
wotreplay-parser.xcodeproj/project.xcworkspace/xcuserdata/jantemmerman.xcuserdatad/: UserInterfaceState.xcuserstate
wotreplay-parser.xcodeproj/xcuserdata/jantemmerman.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
wotreplay-parser.xcodeproj/xcuserdata/jantemmerman.xcuserdatad/xcschemes/: wotstats.xcscheme  xcschememanagement.plist
wotstats/: HttpClient.cpp  HttpClient.h  Url.cpp  Url.h  main.cpp  packet.cpp  packet.h  replay_file.cpp  replay_file.h  types.h
wotstats.xcodeproj/: project.pbxproj
